Fix T78112: VSE Sequencer/Preview crash after fullscreen

The region refresh callback wasn't called, which in the VSE ensures valid
region sizes and removes handlers of invisible regions.